Resized Buttons Everything Working

--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
         </div>
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-1">
                 <a href="http://www.youtube.com/user/TheAn1manny">
                     <img class="img-responsive center-block" id="YouTubeC" src="assets/youtube_colour.png">
                 </a>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-1">
 
                 <a href="https://500px.com/anisrikanth">
-                    <img class="img-responsive center-block" id="YouTubeC" src="assets/cameraC.png">
+                    <img class="img-responsive center-block" id="CameraC" src="assets/cameraC.png">
+                    
                 </a>
 
             </div>
