BUTTONS PERFECT SIZED + NEW TABS

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
         </div>
 
         <div class="row">
-            <div class="col-md-1">
-                <a href="http://www.youtube.com/user/TheAn1manny">
+            <div class="col-md-6">
+                <a href="http://www.youtube.com/user/TheAn1manny" target="_blank">
                     <img class="img-responsive center-block" id="YouTubeC" src="assets/youtube_colour.png">
                 </a>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-6">
 
-                <a href="https://500px.com/anisrikanth">
+                <a href="https://500px.com/anisrikanth" target="_blank">
                     <img class="img-responsive center-block" id="CameraC" src="assets/cameraC.png">
                     
                 </a>
