Fixes Thumbnail Regions, mobile images fine, destop images weird

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="col-md-12">
 
-                <p class="text-center" id="blurb">my name is ani. i like to make things.</p>
+                <p class="text-center" id="blurb">my name is ani. i like to create.</p>
 
             </div>
 
@@ -70,19 +70,17 @@
 
         </div>
 
-        <div class="row">
+        <div class="row" id = "links">
             <div class="col-md-6">
                 <a href="http://www.youtube.com/user/TheAn1manny" target="_blank">
-                    <img class="img-responsive center-block" id="YouTubeC" src="assets/youtube_colour.png">
-                </a>
+                    <img class="image-thumbnail" id="YouTubeC" src="assets/youtube_colour.png"/>
+                <a>
             </div>
+            
             <div class="col-md-6">
-
                 <a href="https://500px.com/anisrikanth" target="_blank">
-                    <img class="img-responsive center-block" id="CameraC" src="assets/cameraC.png">
-                    
+                    <img class="image-thumbnail" id="YouTubeC" src="assets/cameraC.png">
                 </a>
-
             </div>
         </div>
     </div>
