Sticky Footer Done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="col-md-1 pull-right">
 
-                <h4><a id="about" href="about.html">about</a></h4>
+                <h4><a id="about" href="about.html" style="text-decoration:none;">about</a></h4>
 
             </div>
 
@@ -70,13 +70,13 @@
 
         </div>
 
-        <div class="row" id = "links">
+        <div class="row" id="links">
             <div class="col-md-6">
                 <a href="http://www.youtube.com/user/TheAn1manny" target="_blank">
-                    <img class="image-thumbnail" id="YouTubeC" src="assets/youtube_colour.png"/>
-                <a>
+                    <img class="image-thumbnail" id="YouTubeC" src="assets/youtube_colour.png" />
+                    <a>
             </div>
-            
+
             <div class="col-md-6">
                 <a href="https://500px.com/anisrikanth" target="_blank">
                     <img class="image-thumbnail" id="YouTubeC" src="assets/cameraC.png">
@@ -85,6 +85,12 @@
         </div>
     </div>
 
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <p class="navbar-text pull-left"> Created by Ani Srikanth</p>
+            <p class="navbar-text pull-right">@ 2016</p>
+        </div>
+    </nav>
 
 </body>
 
