Complete Redesign, New Base Point

--- a/about.html
+++ b/about.html
@@ -1,38 +1,50 @@
 <html>
 
 <head>
-
-    <title> about </title>
+    <title> Ani </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="about.css" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="about.css" type="text/css" />
 </head>
 
-<body scroll="no" style="overflow: hidden">
-
-    <div class="row">
-
-        <div class="col-md-12">
-
-            <p class="text-center" id="description"> I'm 15. I live in Ontario and I make videos, music, robots, art, and I program.</p>
+<body>
+    <div class="container">
+        <div class="row">
+            <center>
+                <div class="col-md-1 pull-left">
+                    <a href="index.html" style="text-decoration: none"><h4 id="about"> home </h4></a>
+                </div>
+            </center>
 
         </div>
 
+        <div class="row">
+            <center>
+                <div class="col-md-12">
+                    <h2 class="vertical-center" id="description"> I'm 15. I make. Videos. Music. Robots. Photos. Websites. This is a portfolio. This is subject constant change. </h2>
+                </div>
+            </center>
 
-
+        </div>
     </div>
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <p class="navbar-text pull-left"> Check out my Social Media</p>
-            <p class="navbar-text pull-right"><i class="fa fa-twitter"></i></p>
-            <p class="navbar-text pull-right"><i class="fa fa-instagram"></i></p>
-            <p class="navbar-text pull-right"><i class="fa fa-facebook"></i></p>
-            <p class="navbar-text pull-right"><i class="fa fa-github"></i></p>
+            <a href="http://www.instagram.com/animanny" target="_blank">
+                <p class="navbar-text pull-right"><i class="fa fa-instagram"></i></p>
+            </a>
+            <a href="http://www.twitter.com/AnimannyYT" target="_blank">
+                <p class="navbar-text pull-right"><i class="fa fa-twitter"></i></p>
+            </a>
+            <a href="http://www.github.com/animanny" target="_blank">
+                <p class="navbar-text pull-right"><i class="fa fa-github"></i></p>
+            </a>
         </div>
     </nav>
+
+
+</body>
 
 </html>
