--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <title> Ani </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -11,78 +10,64 @@
 <body>
 
     <div class="container">
-
         <div class="row">
-
             <div class="col-md-1 pull-right">
-
-                <h4><a id="about" href="about.html" style="text-decoration:none;">about</a></h4>
-
+                <center>
+                    <a href="about.html" style="text-decoration: none"><h4 id="about">about</h4></a>
+                </center>
             </div>
-
         </div>
 
         <div class="row">
-
             <div class="col-md-12">
-
                 <img class="img-responsive center-block" id="dp" src="assets/dp.jpg">
             </div>
 
-        </div>
-
-        <div class="row">
-
-            <div class="col-md-12" id="">
-
-                <h1 class="text-center" id="name"> Ani Srikanth</h1>
-
+            <div class="row">
+                <div class="col-md-12" id="">
+                    <h1 class="text-center" id="name">Ani Srikanth</h1>
+                </div>
             </div>
 
-        </div>
-
-        <div class="row">
-
-            <div class="col-md-8 col-md-offset-2" id="space">
-
-
-
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2" id="space"></div>
             </div>
 
-        </div>
-
-        <div class="row">
-
-            <div class="col-md-12">
-
-                <p class="text-center" id="blurb">my name is ani. i like to create.</p>
-
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center unselectable" id="blurb">My name is Ani. I like to create.</p>
+                </div>
             </div>
 
-        </div>
-
-        <div class="row">
-
-            <div class="col-md-8 col-md-offset-2" id="space">
-
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2" id="space"></div>
             </div>
 
+            <center>
+                <div class="row" id="links">
+                    <div class="col-md-4">
+                        <p id="subtitle">The Mind</p>
+                        <a href="http://www.youtube.com/user/TheAn1manny" target="_blank">
+                            <img class="image-thumbnail" id="YouTubeC" src="assets/youtubeUC.png" onmouseover="youtubeC.png">
+                        </a>
+                    </div>
 
+                    <div class="col-md-4">
+                        <p id="subtitle">The Eyes</p>
+                        <a href="https://500px.com/anisrikanth" target="_blank">
+                            <img class="image-thumbnail" id="YouTubeC" src="assets/cameraC.png">
+                        </a>
+                    </div>
+
+                    <div class="col-md-4">
+                        <p id="subtitle">The Ears</p>
+                        <a href="http://www.soundcloud.com/anisrikanth" target="_blank">
+                            <img class="image-thumbnail" id="YouTubeC" src="assets/soundcloud.png" />
+                        </a>
+                    </div>
+                </div>
         </div>
-
-        <div class="row" id="links">
-            <div class="col-md-6">
-                <a href="http://www.youtube.com/user/TheAn1manny" target="_blank">
-                    <img class="image-thumbnail" id="YouTubeC" src="assets/youtube_colour.png" />
-                    <a>
-            </div>
-
-            <div class="col-md-6">
-                <a href="https://500px.com/anisrikanth" target="_blank">
-                    <img class="image-thumbnail" id="YouTubeC" src="assets/cameraC.png">
-                </a>
-            </div>
-        </div>
+        </center>
     </div>
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
@@ -91,6 +76,7 @@
             <p class="navbar-text pull-right">@ 2016</p>
         </div>
     </nav>
+
 
 </body>
 
