FINAL NEW BASE POINT

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="col-md-4">
                         <p id="subtitle">The Mind</p>
                         <a href="http://www.youtube.com/user/TheAn1manny" target="_blank">
-                            <img class="image-thumbnail" id="YouTubeC" src="assets/youtubeUC.png" onmouseover="youtubeC.png">
+                            <img class="image-thumbnail" id="YouTubeC" src="assets/youtubeC.png">
                         </a>
                     </div>
 
@@ -61,13 +61,15 @@
 
                     <div class="col-md-4">
                         <p id="subtitle">The Ears</p>
-                        <a href="http://www.soundcloud.com/anisrikanth" target="_blank">
-                            <img class="image-thumbnail" id="YouTubeC" src="assets/soundcloud.png" />
-                        </a>
+                        <div id="cf">
+                            <a href="https://soundcloud.com/animanny" target="_blank">
+                                <img class="bottom image-thumbnail" id="YouTubeC" src="assets/soundcloud.png" />
+                            </a>
+                        </div>
                     </div>
                 </div>
+                </center>
         </div>
-        </center>
     </div>
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
