FULL NEW CLEAN BUILD

--- a/index.html
+++ b/index.html
@@ -9,38 +9,40 @@
 
 <body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-1 pull-right">
-                <center>
-                    <a href="about.html" style="text-decoration: none"><h4 id="about">about</h4></a>
-                </center>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <img class="img-responsive center-block" id="dp" src="assets/dp.jpg">
-            </div>
-
+    <div class="wrap">
+        <div class="container">
             <div class="row">
-                <div class="col-md-12" id="">
-                    <h1 class="text-center" id="name">Ani Srikanth</h1>
+                <div class="col-md-1 pull-right">
+                    <center>
+                        <a href="about.html" style="text-decoration: none"><h4 id="about">about</h4></a>
+                    </center>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2" id="space"></div>
             </div>
 
             <div class="row">
                 <div class="col-md-12">
-                    <p class="text-center unselectable" id="blurb">My name is Ani. I like to create.</p>
+                    <img class="img-responsive center-block" id="dp" src="assets/dp.jpg">
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2" id="space"></div>
+                <div class="row">
+                    <div class="col-md-12" id="">
+                        <h1 class="text-center" id="name">Ani Srikanth</h1>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2" id="space"></div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <p class="text-center unselectable" id="blurb">My name is Ani. I like to create.</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2" id="space"></div>
+                </div>
             </div>
 
             <center>
@@ -61,14 +63,12 @@
 
                     <div class="col-md-4">
                         <p id="subtitle">The Ears</p>
-                        <div id="cf">
-                            <a href="https://soundcloud.com/animanny" target="_blank">
-                                <img class="bottom image-thumbnail" id="YouTubeC" src="assets/soundcloud.png" />
-                            </a>
-                        </div>
+                        <a href="https://soundcloud.com/animanny" target="_blank">
+                            <img class="image-thumbnail" id="YouTubeC" src="assets/soundcloud.png" />
+                        </a>
                     </div>
                 </div>
-                </center>
+            </center>
         </div>
     </div>
 
