updated about section

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <div class="row">
             <center>
                 <div class="col-md-12">
-                    <h2 class="vertical-center" id="description"> I'm 15. I make. Videos. Music. Robots. Photos. Websites. This is a portfolio. This is subject constant change. </h2>
+                    <h2 class="vertical-center" id="description"> I'm 15. I make. Videos. Music. Robots. Photos. Websites. This is a portfolio. This is subject to constant change. </h2>
                 </div>
             </center>
 
